# rhythm

./: Cargo.toml  README.md  config.toml
src/crates/application/: Cargo.toml
src/crates/application/src/: auth.rs  context.rs  error.rs  lib.rs  shared.rs
src/crates/application/src/command/: album.rs  artist.rs  audio_file.rs  cover_art.rs  genre.rs  library.rs  media_annotation.rs  media_parse.rs  mod.rs  play_queue.rs  playlist.rs  shared.rs  user.rs
src/crates/application/src/event/: README.md  event_bus.rs  events.rs  mod.rs
src/crates/application/src/event/coordinator/: bind_to_album.rs  bind_to_artist.rs  bind_to_audio_file.rs  bind_to_cover_art.rs  mod.rs  register.rs
src/crates/application/src/event/handler/: mod.rs  on_library_file_added.rs
src/crates/application/src/event/handler/album/: on_audio_file_parsed.rs  registry.rs
src/crates/application/src/event/handler/artist/: on_audio_file_parsed.rs  registry.rs
src/crates/application/src/event/handler/audio_file/: mod.rs  (+2 more)
src/crates/application/src/projector/: album_location.rs  album_stats.rs  artist_location.rs  genre_stats.rs  mod.rs  participant_stats.rs  playback_history.rs  scan_status.rs
src/crates/application/src/query/: artist.rs  config.rs  dao.rs  get_album.rs  get_album_info.rs  get_album_list.rs  get_artist.rs  get_artist_info.rs  get_artist_list.rs  get_cover_art.rs  get_genres.rs  get_music_folders.rs  get_play_queue.rs  get_playlist.rs  get_random_songs.rs  get_similar_songs.rs  get_song.rs  get_songs_by_genre.rs  get_songs_list.rs  get_starred.rs  get_top_songs.rs  mod.rs  shared.rs  stream_cache.rs  stream_media.rs
src/crates/application/src/query/dto/: album_info.rs  artist.rs  artist_info.rs  artwork_id.rs  cover_art.rs  mod.rs
src/crates/infra/: BENCHMARK_SUMMARY.txt  Cargo.toml  bench.sh
src/crates/infra/benches/: README.md  SUMMARY.md  memtable_benchmark.rs
src/crates/infra/src/: auth.rs  config.rs  crypto.rs  file_type_detector.rs  id_generator.rs  lib.rs  normalize.rs
src/crates/infra/src/cover_art/: cache.rs  mod.rs  reader.rs
src/crates/infra/src/event_bus/: in_memory.rs  mod.rs
src/crates/infra/src/metadata/: audio_metadata_reader.rs  mod.rs  rule_engine.rs
src/crates/infra/src/repository/: mod.rs
src/crates/infra/src/repository/buffered/: memtable.rs  mod.rs
src/crates/infra/src/repository/in_memory/: mod.rs  scan_status.rs
src/crates/infra/src/repository/postgres/: mod.rs  restful.rs
src/crates/infra/src/storage/: factory.rs  local.rs  mod.rs  smb.rs
src/crates/infra/src/transcoding/: cache.rs  ffmpeg_streamer.rs  mod.rs
src/crates/model/: Cargo.toml
src/crates/model/src/: album.rs  album_location.rs  album_stats.rs  artist.rs  artist_info.rs  artist_location.rs  artwork_id.rs  audio_file.rs  bookmark.rs  discs.rs  genre.rs  kind.rs  lib.rs  library.rs  lyrics.rs  mbz_album.rs  music_folder.rs  participant_stats.rs  play_queue.rs  playback_history.rs  player.rs  playlist.rs  radio.rs  scan_status.rs  scrobble.rs  shared.rs  transcoding.rs  user.rs
src/crates/server/: Cargo.toml
src/crates/server/src/: auth.rs  consts.rs  lib.rs  middleware.rs  native_api.rs  resources.rs  say_hi.rs
src/crates/server/src/middleware/: jwt_verify.rs  other.rs
src/crates/server/src/subsonic/: bookmarks.rs  browsing.rs  helper.rs  media_annotation.rs  media_retrieval.rs  mod.rs  playlists.rs  scan.rs  searching.rs  song_album_list.rs  system.rs  users.rs
src/crates/server/src/subsonic/response/: album.rs  artist.rs  directory.rs  error.rs  genre.rs  lyric.rs  mod.rs  music_folder.rs  play.rs  scan.rs  search.rs  share.rs  song.rs  star.rs  user.rs
(+133 files in other folders)
