[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "memtable_benchmark"
harness = false

[dependencies]
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "postgres-array"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
domain = { path = "../domain" }
model = { path = "../model" }
application = { path = "../application" }
anyhow = "1.0.86"
crossbeam = "0.8.4"
walkdir = "2.5.0"
mime_guess = "2.0"
taglib = { git = "https://github.com/ebassi/taglib-rust" }
id3 = "1.13.1"
tempfile = "3.19.1"
log = "0.4.27"
itertools = "0.12"
pavao = "0.2.12"
dotenvy = "0.15.7"
config = "0.15.11"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
dashmap = "5"
sea-query = "0.32.7"
once_cell = "1.21.3"
unidecode = "0.3.0"
lru = "0.12"
moka = { version = "0.12.11", features = ["future", "sync"] }
indexmap = "2.12.0"
bytes = "1"
regex = "1"
sled = "0.34"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
