[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
serde = {version="1.0.120", features=["derive"]}
domain = { path = "../domain" }
thiserror = "1.0.65"
log = "0.4.20"
tokio = { version = "1.0", features = ["sync"] }
async-trait = "0.1.68"
uuid = "1.18.1"
